--- a/site/composer.json
+++ b/site/composer.json
@@ -88,7 +88,10 @@
     "wpackagist-plugin/mailchimp-for-woocommerce": "*",
     "wpackagist-plugin/woo-redsys-gateway-light": "*",
     "wpackagist-plugin/favicon-by-realfavicongenerator": "*",
-    "wpackagist-plugin/mailchimp-for-wp": "*"
+    "wpackagist-plugin/mailchimp-for-wp": "*",
+    "log1x/poet": "^2.0",
+    "wp-sync-db/wp-sync-db-media-files": "dev-master",
+    "analogmemory/wp-sync-db": "1.6"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
