--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "Select2": "^3.5.7",
     "animejs": "^3.2.1",
     "lightgallery": "^2.7.1",
