--- a/site/web/app/themes/sage/composer.json
+++ b/site/web/app/themes/sage/composer.json
@@ -40,7 +40,8 @@
   },
   "require": {
     "php": "^8.0",
-    "generoi/sage-woocommerce": "^1.0"
+    "generoi/sage-woocommerce": "^1.0",
+    "log1x/sage-directives": "^1.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "3.7.1"
