--- a/site/web/app/themes/sage/composer.json
+++ b/site/web/app/themes/sage/composer.json
@@ -41,7 +41,8 @@
   "require": {
     "php": "^8.0",
     "generoi/sage-woocommerce": "^1.0",
-    "log1x/sage-directives": "^1.1"
+    "log1x/sage-directives": "^1.1",
+    "log1x/sage-svg": "^1.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "3.7.1"
