--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "Select2": "^3.5.7",
     "animejs": "^3.2.1",
+    "gsap": "^3.11.5",
     "lightgallery": "^2.7.1",
     "scrambling-text": "^1.2.0"
   }
