--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -2,12 +2,12 @@
 # Documentation: https://roots.io/trellis/docs/wordpress-sites/
 
 wordpress_sites:
-  stage-futurabasura.com:
+  stage.futurabasura.com:
     site_hosts:
-      - canonical: stage-futurabasura.com
+      - canonical: stage.futurabasura.com
     local_path: ../site
     branch: main
-    repo: git@github.com:aitormendez/futurabasura.git
+    repo: git@github.com:aitormendez/futurabasura.com.git
     repo_subtree_path: site
     multisite:
       enabled: false
