--- a/trellis/group_vars/all/main.yml
+++ b/trellis/group_vars/all/main.yml
@@ -3,7 +3,7 @@ apt_package_state: present
 apt_security_package_state: latest
 apt_dev_package_state: latest
 composer_keep_updated: true
-php_version: "8.1"
+php_version: "8.2"
 ntp_timezone: Etc/UTC
 ntp_manage_config: true
 www_root: /srv/www
@@ -14,6 +14,8 @@ wp_max_memory_limit: 1024M
 php_post_max_size: 32M
 php_upload_max_filesize: 32M
 php_max_execution_time: 240
+letsencrypt_contact_emails:
+  - admin@e451.net
 
 # Values of raw_vars will be wrapped in `{% raw %}` to avoid templating problems if values include `{%` and `{{`.
 # Will recurse dicts/lists. `*` is wildcard for one or more dict keys, list indices, or strings. Example:
