--- a/site/composer.json
+++ b/site/composer.json
@@ -17,7 +17,12 @@
     }
   ],
   "keywords": [
-    "bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
+    "bedrock",
+    "composer",
+    "roots",
+    "wordpress",
+    "wp",
+    "wp-config"
   ],
   "support": {
     "issues": "https://github.com/roots/bedrock/issues",
@@ -27,13 +32,16 @@
     "wpackagist": {
       "type": "composer",
       "url": "https://wpackagist.org",
-      "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
+      "only": [
+        "wpackagist-plugin/*",
+        "wpackagist-theme/*"
+      ]
     },
     "1": {
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "6.1.6",
+        "version": "6.2.4",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -41,31 +49,7 @@
         },
         "require": {
           "composer/installers": "^2.2",
-          "ffraenz/private-composer-installer": "^5.0.1"          
-        }
-      }
-    },
-    "2": {
-      "type": "package",
-      "package": {
-        "name": "analogmemory/wp-sync-db",
-        "type": "wordpress-plugin",
-        "version": "1.6",
-        "dist": {
-          "type": "zip",
-          "url": "https://github.com/AnalogMemory/wp-sync-db/archive/master.zip"
-        }
-      }
-    },
-    "3": {
-      "type": "package",
-      "package": {
-        "name": "wp-sync-db/wp-sync-db-media-files",
-        "type": "wordpress-plugin",
-        "version": "master",
-        "dist": {
-          "type": "zip",
-          "url": "https://github.com/wp-sync-db/wp-sync-db-media-files/archive/master.zip"
+          "ffraenz/private-composer-installer": "^5.0.1"
         }
       }
     }
@@ -77,7 +61,7 @@
     "oscarotero/env": "^2.1",
     "roots/bedrock-autoloader": "^1.0",
     "roots/bedrock-disallow-indexing": "^2.0",
-    "roots/wordpress": "6.2.2",
+    "roots/wordpress": "6.4.2",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.1.0",
     "wpackagist-theme/twentytwentythree": "^1.0",
@@ -90,8 +74,6 @@
     "wpackagist-plugin/favicon-by-realfavicongenerator": "*",
     "wpackagist-plugin/mailchimp-for-wp": "*",
     "log1x/poet": "^2.0",
-    "wp-sync-db/wp-sync-db-media-files": "dev-master",
-    "analogmemory/wp-sync-db": "1.6",
     "log1x/acf-composer": "^2.1",
     "log1x/navi": "^2.0"
   },
@@ -112,9 +94,15 @@
   "prefer-stable": true,
   "extra": {
     "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "web/app/themes/{$name}/": ["type:wordpress-theme"]
+      "web/app/mu-plugins/{$name}/": [
+        "type:wordpress-muplugin"
+      ],
+      "web/app/plugins/{$name}/": [
+        "type:wordpress-plugin"
+      ],
+      "web/app/themes/{$name}/": [
+        "type:wordpress-theme"
+      ]
     },
     "wordpress-install-dir": "web/wp"
   },
