--- a/site/composer.json
+++ b/site/composer.json
@@ -75,7 +75,8 @@
     "wpackagist-plugin/mailchimp-for-wp": "*",
     "log1x/poet": "^2.0",
     "log1x/acf-composer": "^2.1",
-    "log1x/navi": "^2.0"
+    "log1x/navi": "^2.0",
+    "mobiledetect/mobiledetectlib": "^4.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
