--- a/site/composer.json
+++ b/site/composer.json
@@ -73,6 +73,7 @@
     "wpackagist-plugin/woo-redsys-gateway-light": "*",
     "wpackagist-plugin/favicon-by-realfavicongenerator": "*",
     "wpackagist-plugin/mailchimp-for-wp": "*",
+    "wpackagist-plugin/variation-swatches-woo": "*",
     "log1x/poet": "^2.0",
     "log1x/acf-composer": "^2.1",
     "log1x/navi": "^2.0",
