--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "Select2": "^3.5.7",
+    "alpinejs": "^3.13.7",
     "animejs": "^3.2.1",
     "gsap": "^3.11.5",
     "infinite-scroll": "^4.0.1",
