--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -27,12 +27,12 @@
     "@glidejs/glide": "^3.6.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "Select2": "^3.5.7",
     "alpinejs": "^3.13.7",
     "animejs": "^3.2.1",
     "gsap": "^3.11.5",
     "infinite-scroll": "^4.0.1",
     "lightgallery": "^2.7.1",
-    "scrambling-text": "^1.2.0"
+    "scrambling-text": "^1.2.0",
+    "select2": "^4.1.0-rc.0"
   }
 }
