--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "@roots/bud": "6.20.0",
     "@roots/bud-tailwindcss": "6.20.0",
-    "@roots/sage": "6.20.0"
+    "@roots/sage": "6.20.0",
+    "tailwind-clip-path": "^1.0.0"
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
