--- a/site/.gitignore
+++ b/site/.gitignore
@@ -1,5 +1,6 @@
 # Application
 web/app/plugins/*
+!web/app/plugins/clover
 !web/app/plugins/.gitkeep
 web/app/mu-plugins/*/
 web/app/themes/twentytwentythree/
