--- a/site/composer.json
+++ b/site/composer.json
@@ -81,8 +81,7 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
-    "roave/security-advisories": "dev-latest",
-    "wpackagist-plugin/wp-dummy-content-generator": "*"
+    "roave/security-advisories": "dev-latest"
   },
   "config": {
     "optimize-autoloader": true,
