--- a/site/composer.json
+++ b/site/composer.json
@@ -38,20 +38,8 @@
       ]
     },
     "1": {
-      "type": "package",
-      "package": {
-        "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "6.2.4",
-        "type": "wordpress-plugin",
-        "dist": {
-          "type": "zip",
-          "url": "https://connect.advancedcustomfields.com/v2/plugins/download?p=pro&k={%ACF_PRO_KEY}&t={%version}"
-        },
-        "require": {
-          "composer/installers": "^2.2",
-          "ffraenz/private-composer-installer": "^5.0.1"
-        }
-      }
+      "type": "composer",
+      "url": "https://connect.advancedcustomfields.com"
     }
   },
   "require": {
@@ -66,7 +54,7 @@
     "roots/wp-password-bcrypt": "1.1.0",
     "wpackagist-theme/twentytwentythree": "^1.0",
     "roots/acorn": "^3.1",
-    "advanced-custom-fields/advanced-custom-fields-pro": "*",
+    "wpengine/advanced-custom-fields-pro": "*",
     "wpackagist-plugin/woocommerce": "*",
     "wpackagist-plugin/easy-wp-smtp": "*",
     "wpackagist-plugin/mailchimp-for-woocommerce": "*",
