--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "@roots/bud": "6.20.0",
     "@roots/bud-tailwindcss": "6.20.0",
-    "@roots/sage": "6.20.0"
+    "@roots/sage": "6.20.0",
+    "@tailwindcss/typography": "^0.5.13"
   },
   "dependencies": {}
 }
