--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -24,5 +24,14 @@
     "@roots/sage": "6.20.0",
     "@tailwindcss/typography": "^0.5.13"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@glidejs/glide": "^3.6.1",
+    "alpinejs": "^3.14.1",
+    "animejs": "^3.2.2",
+    "gsap": "^3.12.5",
+    "infinite-scroll": "^4.0.1",
+    "lightgallery": "^2.7.2",
+    "prop-types": "^15.8.1",
+    "scrambling-text": "^1.2.0"
+  }
 }
