--- a/trellis/deploy-hooks/build-before.yml
+++ b/trellis/deploy-hooks/build-before.yml
@@ -17,7 +17,7 @@
   template:
     src: templates/auth.json.j2
     dest: "{{ deploy_helper.new_release_path }}/auth.json"
-  no_log: true
+  no_log: false
 
 - name: Install Composer dependencies
   command: composer install --no-ansi --no-dev --no-interaction --no-progress --optimize-autoloader --no-scripts --classmap-authoritative
