Bloque de video. Añadir icono y selector de ancho

--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -27,6 +27,9 @@
   "dependencies": {
     "@glidejs/glide": "^3.6.1",
     "@vidstack/react": "^1.11.25",
+    "@wordpress/blocks": "^13.2.0",
+    "@wordpress/element": "^6.2.0",
+    "@wordpress/icons": "^10.2.0",
     "alpinejs": "^3.14.1",
     "animejs": "^3.2.2",
     "gsap": "^3.12.5",
