--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -38,6 +38,7 @@
     "lightgallery": "^2.7.2",
     "media-icons": "^1.1.4",
     "prop-types": "^15.8.1",
+    "radix-ui": "^1.0.1",
     "scrambling-text": "^1.2.0"
   }
 }
