--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -36,6 +36,7 @@
     "hls.js": "^1.5.13",
     "infinite-scroll": "^4.0.1",
     "lightgallery": "^2.7.2",
+    "lucide-react": "^0.407.0",
     "media-icons": "^1.1.4",
     "prop-types": "^15.8.1",
     "radix-ui": "^1.0.1",
