--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -40,6 +40,7 @@
     "media-icons": "^1.1.4",
     "prop-types": "^15.8.1",
     "radix-ui": "^1.0.1",
+    "react-feather": "^2.0.10",
     "scrambling-text": "^1.2.0"
   }
 }
