--- a/trellis/roles/wordpress-setup/defaults/main.yml
+++ b/trellis/roles/wordpress-setup/defaults/main.yml
@@ -7,6 +7,9 @@ nginx_sites_confs:
   - src: ssl.no-default.conf.j2
     enabled: false
 
+nginx_http2_enabled: true
+nginx_http3_enabled: false
+
 # HSTS defaults
 nginx_hsts_max_age: 31536000
 nginx_hsts_include_subdomains: false
