--- a/trellis/.gitignore
+++ b/trellis/.gitignore
@@ -4,4 +4,7 @@ vagrant.local.yml
 vendor/roles
 *.py[co]
 *.retry
-.trellis/virtualenv
+.trellis/*
+!.trellis/cli.yml
+trellis.cli.local.yml
+.vault_pass
