--- a/trellis/Vagrantfile
+++ b/trellis/Vagrantfile
@@ -19,14 +19,7 @@ trellis_config = Trellis::Config.new(root_path: ANSIBLE_PATH)
 Vagrant.require_version vconfig.fetch('vagrant_require_version', '>= 2.1.0')
 
 Vagrant.configure('2') do |config|
-  box = vconfig.fetch('vagrant_box')
-  box_auto_arch = vconfig.fetch('vagrant_box_auto_arch', true)
-
-  if box_auto_arch && !box.end_with?("-arm64") && apple_silicon?
-    box = "#{box}-arm64"
-  end
-
-  config.vm.box = box
+  config.vm.box = vconfig.fetch('vagrant_box')
   config.vm.box_version = vconfig.fetch('vagrant_box_version')
   config.ssh.forward_agent = true
   config.vm.post_up_message = post_up_message
@@ -207,5 +200,13 @@ Vagrant.configure('2') do |config|
     h.memory = vconfig.fetch('vagrant_memory')
     h.enable_virtualization_extensions = true
     h.linked_clone = true
+  end
+
+  # Libvirt/KVM settings
+  config.vm.provider 'libvirt' do |lv|
+    lv.driver = "kvm"
+    lv.title = config.vm.hostname
+    lv.cpus = vconfig.fetch('vagrant_cpus')
+    lv.memory = vconfig.fetch('vagrant_memory')
   end
 end
