--- a/trellis/group_vars/development/wordpress_sites.yml
+++ b/trellis/group_vars/development/wordpress_sites.yml
@@ -1,20 +1,19 @@
-# Created by trellis-cli v1.11.0
-# Documentation: https://roots.io/trellis/docs/wordpress-sites/
+# Documentation: https://roots.io/trellis/docs/local-development-setup/
+# `wordpress_sites` options: https://roots.io/trellis/docs/wordpress-sites
+# Define accompanying passwords/secrets in group_vars/development/vault.yml
 
 wordpress_sites:
   futurabasura.com:
     site_hosts:
       - canonical: futurabasura.test
-        redirects:
-          - www.futurabasura.test
     local_path: ../site
     admin_email: admin@futurabasura.test
     multisite:
       enabled: false
     ssl:
       enabled: true
-      provider: manual
-      cert: /Users/aitor/Documents/Sites/futurabasura.com/letsencrypt/futurabasura.test+5.pem
-      key: /Users/aitor/Documents/Sites/futurabasura.com/letsencrypt/futurabasura.test+5-key.pem
+      provider: self-signed
     cache:
+      enabled: false
+    xmlrpc:
       enabled: false
