--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -1,5 +1,6 @@
-# Created by trellis-cli v1.11.0
-# Documentation: https://roots.io/trellis/docs/wordpress-sites/
+# Documentation: https://roots.io/trellis/docs/remote-server-setup/
+# `wordpress_sites` options: https://roots.io/trellis/docs/wordpress-sites
+# Define accompanying passwords/secrets in group_vars/staging/vault.yml
 
 wordpress_sites:
   stage.futurabasura.com:
@@ -15,4 +16,6 @@ wordpress_sites:
       enabled: true
       provider: letsencrypt
     cache:
+      enabled: false
+    xmlrpc:
       enabled: false
