--- a/trellis/roles/php/tasks/main.yml
+++ b/trellis/roles/php/tasks/main.yml
@@ -1,10 +1,4 @@
 ---
-- name: Download CA certificates file for cURL
-  get_url:
-    url: https://curl.se/ca/cacert.pem
-    dest: /etc/ssl/certs/cacert.pem
-    mode: "0644"
-
 - name: Add PHP PPA
   apt_repository:
     repo: "ppa:ondrej/php"
@@ -48,18 +42,31 @@
     state: started
     enabled: true
 
-- name: Copy PHP-FPM configuration file
+- name: Copy PHP-FPM php.ini file
   template:
     src: php-fpm.ini.j2
     dest: /etc/php/{{ php_version }}/fpm/php.ini
-    mode: "0644"
+    mode: '0644'
+
+- name: Copy PHP-FPM configuration file
+  template:
+    src: php-fpm.conf.j2
+    dest: /etc/php/{{ php_version }}/fpm/php-fpm.conf
+    mode: '0644'
   notify: reload php-fpm
 
 - name: Copy PHP CLI configuration file
   template:
     src: php-cli.ini.j2
     dest: /etc/php/{{ php_version }}/cli/php.ini
-    mode: "0644"
+    mode: '0644'
+
+- name: Copy 10-opcache.ini configuration file
+  template:
+    src: 10-opcache.ini.j2
+    dest: /etc/php/{{ php_version }}/fpm/conf.d/10-opcache.ini
+    mode: '0644'
+  notify: reload php-fpm
 
 - name: Change ImageMagick policy.xml to allow for PDFs
   replace:
