--- a/site/web/app/themes/sage/composer.json
+++ b/site/web/app/themes/sage/composer.json
@@ -40,8 +40,10 @@
   },
   "require": {
     "php": ">=8.1",
+    "blade-ui-kit/blade-icons": "^1.7",
     "generoi/sage-woocommerce": "^1.1",
-    "log1x/sage-svg": "^2.0"
+    "log1x/sage-svg": "^2.0",
+    "owenvoke/blade-fontawesome": "^2.6"
   },
   "require-dev": {
     "laravel/pint": "^1.13"
