--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -43,6 +43,7 @@
     "prop-types": "^15.8.1",
     "radix-ui": "^1.0.1",
     "react-feather": "^2.0.10",
-    "scrambling-text": "^1.2.0"
+    "scrambling-text": "^1.2.0",
+    "swiper": "^11.1.9"
   }
 }
