--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -20,9 +20,9 @@
     "translate:mo": "wp i18n make-mo ./resources/lang ./resources/lang"
   },
   "devDependencies": {
-    "@roots/bud": "6.23.1",
-    "@roots/bud-tailwindcss": "6.23.1",
-    "@roots/sage": "6.23.1",
+    "@roots/bud": "^6.23.2",
+    "@roots/bud-tailwindcss": "^6.23.2",
+    "@roots/sage": "^6.23.2",
     "@tailwindcss/typography": "^0.5.13"
   },
   "dependencies": {
