--- a/site/composer.json
+++ b/site/composer.json
@@ -62,6 +62,7 @@
     "wpackagist-plugin/favicon-by-realfavicongenerator": "*",
     "wpackagist-plugin/mailchimp-for-wp": "*",
     "wpackagist-plugin/variation-swatches-woo": "*",
+    "wpackagist-plugin/complianz-gdpr": "*",
     "log1x/poet": "^2.0",
     "log1x/acf-composer": "^3.0.24",
     "log1x/navi": "^3.0.3",
