Query monitor plugin

--- a/site/composer.json
+++ b/site/composer.json
@@ -64,6 +64,7 @@
     "wpackagist-plugin/variation-swatches-woo": "*",
     "wpackagist-plugin/complianz-gdpr": "*",
     "wpackagist-plugin/woocommerce-square": "*",
+    "wpackagist-plugin/query-monitor": "*",
     "log1x/poet": "^2.0",
     "log1x/acf-composer": "^3.0.24",
     "log1x/navi": "^3.0.3",
