--- a/site/web/app/themes/sage/composer.json
+++ b/site/web/app/themes/sage/composer.json
@@ -40,7 +40,9 @@
   },
   "require": {
     "php": ">=8.1",
-    "generoi/sage-woocommerce": "^1.1"
+    "blade-ui-kit/blade-icons": "^1.7",
+    "generoi/sage-woocommerce": "^1.1",
+    "owenvoke/blade-fontawesome": "^2.6"
   },
   "require-dev": {
     "laravel/pint": "^1.13"
