--- a/site/composer.json
+++ b/site/composer.json
@@ -68,7 +68,8 @@
     "log1x/navi": "^3.0.3",
     "mobiledetect/mobiledetectlib": "^4.8",
     "roots/acorn-prettify": "^1.0",
-    "log1x/sage-html-forms": "^1.0"
+    "log1x/sage-html-forms": "^1.0",
+    "spatie/dropbox-api": "^1.22"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
