--- a/site/composer.json
+++ b/site/composer.json
@@ -69,7 +69,8 @@
     "mobiledetect/mobiledetectlib": "^4.8",
     "roots/acorn-prettify": "^1.0",
     "log1x/sage-html-forms": "^1.0",
-    "spatie/dropbox-api": "^1.22"
+    "spatie/dropbox-api": "^1.22",
+    "league/oauth2-client": "^2.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
