--- a/site/web/app/themes/sage/composer.json
+++ b/site/web/app/themes/sage/composer.json
@@ -42,6 +42,7 @@
     "php": ">=8.1",
     "blade-ui-kit/blade-icons": "^1.7",
     "generoi/sage-woocommerce": "^1.1",
+    "league/oauth2-client": "^2.7",
     "owenvoke/blade-fontawesome": "^2.6"
   },
   "require-dev": {
