--- a/trellis/group_vars/all/main.yml
+++ b/trellis/group_vars/all/main.yml
@@ -9,8 +9,14 @@ ntp_manage_config: true
 www_root: /srv/www
 max_journal_size: 512M
 php_memory_limit: 512M
+php_upload_max_filesize: 100M
+php_post_max_size: 100M
+php_max_execution_time: 300
+php_max_input_time: 300
 letsencrypt_contact_emails:
   - admin@e451.net
+php_extensions_custom:
+  php8.2-soap: "{{ apt_package_state }}"
 
 # Values of raw_vars will be wrapped in `{% raw %}` to avoid templating problems if values include `{%` and `{{`.
 # Will recurse dicts/lists. `*` is wildcard for one or more dict keys, list indices, or strings. Example:
