--- a/site/composer.json
+++ b/site/composer.json
@@ -71,6 +71,7 @@
     "spatie/dropbox-api": "^1.22",
     "league/oauth2-client": "^2.7",
     "wpackagist-plugin/pixelyoursite": "^10.0",
+    "wpackagist-plugin/redis-cache": "*",
     "wpackagist-plugin/complianz-gdpr": "*"
   },
   "require-dev": {
