Woo payments + updates

--- a/site/composer.json
+++ b/site/composer.json
@@ -62,6 +62,7 @@
     "wpackagist-plugin/woocommerce-square": "*",
     "wpackagist-plugin/query-monitor": "*",
     "wpackagist-plugin/html-forms": "*",
+    "wpackagist-plugin/woocommerce-payments": "*",
     "log1x/poet": "^2.0",
     "log1x/acf-composer": "^3.0.24",
     "log1x/navi": "^3.0.3",
