--- a/trellis/deploy-hooks/build-before.yml
+++ b/trellis/deploy-hooks/build-before.yml
@@ -48,3 +48,47 @@
     group: no
     owner: no
     rsync_opts: --chmod=Du=rwx,--chmod=Dg=rx,--chmod=Do=rx,--chmod=Fu=rw,--chmod=Fg=r,--chmod=Fo=r
+
+# SAGE 11
+
+- name: Install npm dependencies
+  command: npm install
+  delegate_to: localhost
+  args:
+    chdir: "{{ project_local_path }}/web/app/themes/sage-2025"
+
+- name: Create Composer auth.json
+  template:
+    src: templates/auth.json.j2
+    dest: "{{ deploy_helper.new_release_path }}/auth.json"
+  no_log: false
+
+- name: Install Composer dependencies
+  command: composer install --no-ansi --no-dev --no-interaction --no-progress --optimize-autoloader --no-scripts --classmap-authoritative
+  args:
+    chdir: "{{ deploy_helper.new_release_path }}/web/app/themes/sage-2025"
+
+- name: Compile assets for production
+  command: npm run build
+  delegate_to: localhost
+  args:
+    chdir: "{{ project_local_path }}/web/app/themes/sage-2025"
+
+- name: Check for manifest
+  stat:
+    path: "{{ project_local_path }}/web/app/themes/sage-2025/public/build/manifest.json"
+  delegate_to: localhost
+  register: entrypoints_data
+
+- name: Entrypoints missing
+  ansible.builtin.fail:
+    msg: "The theme is missing the build manifest file"
+  when: not entrypoints_data.stat.exists
+
+- name: Copy production assets
+  synchronize:
+    src: "{{ project_local_path }}/web/app/themes/sage-2025/public"
+    dest: "{{ deploy_helper.new_release_path }}/web/app/themes/sage-2025"
+    group: no
+    owner: no
+    rsync_opts: --chmod=Du=rwx,--chmod=Dg=rx,--chmod=Do=rx,--chmod=Fu=rw,--chmod=Fg=r,--chmod=Fo=r
