--- a/trellis/group_vars/development/wordpress_sites.yml
+++ b/trellis/group_vars/development/wordpress_sites.yml
@@ -1,11 +1,12 @@
-# Documentation: https://roots.io/trellis/docs/local-development-setup/
-# `wordpress_sites` options: https://roots.io/trellis/docs/wordpress-sites
-# Define accompanying passwords/secrets in group_vars/development/vault.yml
+# Created by trellis-cli v1.13.0
+# Documentation: https://roots.io/trellis/docs/wordpress-sites/
 
 wordpress_sites:
   futurabasura.com:
     site_hosts:
       - canonical: futurabasura.test
+        redirects:
+          - www.futurabasura.test
     local_path: ../site
     admin_email: admin@futurabasura.test
     multisite:
@@ -14,7 +15,7 @@ wordpress_sites:
       enabled: true
       provider: self-signed
     cache:
-      enabled: true
+      enabled: false
       duration: 30s
       skip_cache_uri: "/wp-admin/|/wp-json/.*|/xmlrpc.php|wp-.*.php|/feed/|index.php|sitemap(_index)?.xml|/store.*|/cart.*|/my-account.*|/checkout.*|/addons.*|/checkout/"
       skip_cache_cookie: comment_author|wordpress_[a-f0-9]+|wp-postpass|wordpress_no_cache|wordpress_logged_in|woocommerce_cart_hash|woocommerce_items_in_cart|wp_woocommerce_session_|edd_items_in_cart
