--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -23,6 +23,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.7.1",
     "lodash-es": "^4.17.21",
     "prop-types": "^15.8.1"
   },
