--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -18,14 +18,27 @@
   "devDependencies": {
     "@roots/vite-plugin": "^1.0.2",
     "@tailwindcss/vite": "^4.0.9",
+    "@vitejs/plugin-react": "^4.3.4",
     "laravel-vite-plugin": "^1.2.0",
     "tailwindcss": "^4.0.9",
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@alpinejs/collapse": "^3.14.9",
     "@glidejs/glide": "^3.7.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@vidstack/react": "^1.12.13",
+    "alpinejs": "^3.14.9",
+    "gsap": "^3.12.7",
+    "infinite-scroll": "^5.0.0",
+    "lightgallery": "^2.8.3",
     "lodash-es": "^4.17.21",
-    "prop-types": "^15.8.1"
+    "lucide-react": "^0.482.0",
+    "prop-types": "^15.8.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "scrambling-text": "^1.2.0"
   },
   "volta": {
     "node": "22.14.0"
