--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -25,11 +25,13 @@
   },
   "dependencies": {
     "@alpinejs/collapse": "^3.14.9",
+    "@devnomic/marquee": "^1.0.3",
     "@glidejs/glide": "^3.7.1",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@vidstack/react": "^1.12.13",
     "alpinejs": "^3.14.9",
+    "core-js": "^3.41.0",
     "gsap": "^3.12.7",
     "infinite-scroll": "^5.0.0",
     "lightgallery": "^2.8.3",
@@ -38,6 +40,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "regenerator-runtime": "^0.14.1",
     "scrambling-text": "^1.2.0"
   },
   "volta": {
