--- a/trellis/roles/mariadb/tasks/main.yml
+++ b/trellis/roles/mariadb/tasks/main.yml
@@ -16,66 +16,66 @@
     update_cache: true
 
 - block:
-    - name: Install MySQL server
-      ansible.builtin.apt:
-        name: "{{ mariadb_server_package }}"
-        state: "{{ mariadb_server_package_state | default(apt_package_state) }}"
-        cache_valid_time: "{{ apt_cache_valid_time }}"
+  - name: Install MySQL server
+    ansible.builtin.apt:
+      name: "{{ mariadb_server_package }}"
+      state: "{{ mariadb_server_package_state | default(apt_package_state) }}"
+      cache_valid_time: "{{ apt_cache_valid_time }}"
 
-    - name: Disable MariaDB binary logging
-      template:
-        src: disable-binary-logging.cnf
-        dest: /etc/mysql/conf.d
-        owner: root
-        group: root
-        mode: "0644"
-      when: mysql_binary_logging_disabled | bool
-      notify: restart mysql server
+  - name: Disable MariaDB binary logging
+    template:
+      src: disable-binary-logging.cnf
+      dest: /etc/mysql/conf.d
+      owner: root
+      group: root
+      mode: '0644'
+    when: mysql_binary_logging_disabled | bool
+    notify: restart mysql server
 
-    - name: Copy .my.cnf file with root password credentials.
-      template:
-        src: my.cnf.j2
-        dest: ~/.my.cnf
-        owner: root
-        group: root
-        mode: "0600"
+  - name: Copy .my.cnf file with root password credentials.
+    template:
+      src: my.cnf.j2
+      dest: ~/.my.cnf
+      owner: root
+      group: root
+      mode: '0600'
 
-    - name: Copy server config file with MariaDB optimisations.
-      template:
-        src: 50-server.cnf.j2
-        dest: /etc/mysql/mariadb.conf.d/50-server.cnf
-        mode: "0644"
-      notify: restart mysql server
+  - name: Copy server config file with MariaDB optimisations.
+    template:
+      src: 50-server.cnf.j2
+      dest: /etc/mysql/mariadb.conf.d/50-server.cnf
+      mode: '0644'
+    notify: restart mysql server
 
-    - name: Set root user password
-      mysql_user:
-        name: root
-        host: "{{ item }}"
-        password: "{{ mysql_root_password }}"
-        check_implicit_admin: yes
-        state: present
-      no_log: false
-      loop:
-        - "{{ inventory_hostname }}"
-        - 127.0.0.1
-        - ::1
-        - localhost
+  - name: Set root user password
+    mysql_user:
+      name: root
+      host: "{{ item }}"
+      password: "{{ mysql_root_password }}"
+      check_implicit_admin: yes
+      state: present
+    no_log: true
+    loop:
+      - "{{ inventory_hostname }}"
+      - 127.0.0.1
+      - ::1
+      - localhost
 
-    - name: Delete anonymous MySQL server users
-      mysql_user:
-        user: ""
-        host: "{{ item }}"
-        state: absent
-      no_log: true
-      loop:
-        - localhost
-        - "{{ inventory_hostname }}"
-        - "{{ ansible_hostname }}"
+  - name: Delete anonymous MySQL server users
+    mysql_user:
+      user: ""
+      host: "{{ item }}"
+      state: absent
+    no_log: true
+    loop:
+      - localhost
+      - "{{ inventory_hostname }}"
+      - "{{ ansible_hostname }}"
 
-    - name: Remove the test database
-      mysql_db:
-        name: test
-        state: absent
-      no_log: true
+  - name: Remove the test database
+    mysql_db:
+      name: test
+      state: absent
+    no_log: true
 
-  when: (wordpress_sites.items() | count) > (sites_using_remote_db | count)
+  when:  (wordpress_sites.items() | count) > (sites_using_remote_db | count)
