excluir fb-blocks del gitignore

--- a/site/.gitignore
+++ b/site/.gitignore
@@ -2,7 +2,8 @@
 web/app/plugins/*
 !web/app/plugins/.gitkeep
 web/app/mu-plugins/*/
-!web/app/plugins/fb-blocks
+!web/app/plugins/fb-blocks/
+!web/app/plugins/fb-blocks/**
 web/app/themes/twentytwentyfive/
 web/app/upgrade
 web/app/uploads/*
