--- a/trellis/roles/deploy/tasks/update.yml
+++ b/trellis/roles/deploy/tasks/update.yml
@@ -30,8 +30,9 @@
     version: "{{ project_version }}"
     accept_hostkey: "{{ project.repo_accept_hostkey | default(repo_accept_hostkey | default(true)) }}"
     force: yes
+    recursive: yes
   ignore_errors: true
-  no_log: true
+  no_log: false
   register: git_clone
 
 - name: Failed connection to remote repo
