--- a/trellis/deploy-hooks/build-before.yml
+++ b/trellis/deploy-hooks/build-before.yml
@@ -48,3 +48,11 @@
     group: no
     owner: no
     rsync_opts: --chmod=Du=rwx,--chmod=Dg=rx,--chmod=Do=rx,--chmod=Fu=rw,--chmod=Fg=r,--chmod=Fo=r
+
+- name: Copy Git submodules manually
+  synchronize:
+    src: "{{ project_local_path }}/web/app/plugins/fb-blocks/"
+    dest: "{{ deploy_helper.new_release_path }}/web/app/plugins/"
+    recursive: yes
+    delete: yes
+  delegate_to: localhost
