añadir jquery a window

--- a/site/web/app/themes/sage/package.json
+++ b/site/web/app/themes/sage/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.41.0",
     "gsap": "^3.12.7",
     "infinite-scroll": "^5.0.0",
+    "jquery": "^3.7.1",
     "lightgallery": "^2.8.3",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.482.0",
