FIX: commit corregido sin vault.yml desencriptado

--- a/trellis/group_vars/all/main.yml
+++ b/trellis/group_vars/all/main.yml
@@ -19,6 +19,7 @@ php_extensions_custom:
   php8.2-soap: "{{ apt_package_state }}"
 apt_packages:
   mailutils: present
+  python3-pymysql: present
 repo_subtree: false
 clone_submodules: true
 
