--- a/trellis/roles/common/tasks/main.yml
+++ b/trellis/roles/common/tasks/main.yml
@@ -1,21 +1,28 @@
 ---
-- block:
-  - name: Load wordpress_sites.yml vars into <env>_sites vars
-    include_vars:
-      file: group_vars/{{ item }}/wordpress_sites.yml
-      name: "{{ item }}_sites"
-    loop: "{{ envs_with_wp_sites }}"
-    when: envs_with_wp_sites | count > 1
+- name: Allow release info change (ondrej/php PPA)
+  shell: apt-get update --allow-releaseinfo-change
+  register: allow_releaseinfo_change_result
+  failed_when: false
+  changed_when: "'Reading package lists' in allow_releaseinfo_change_result.stdout"
+  tags: [apt, php, ondrej]
 
-  - name: Fail if there are duplicate site keys within host's wordpress_sites
-    fail:
-      msg: >
-        If you put multiple environments on `{{ inventory_hostname }}`, `wordpress_sites`
-        must use different site keys per environment. Adjust the following site keys that
-        are duplicated between the `{{ item.env_pair | join('` and `') }}` groups:
-          {{ item.site_keys | to_nice_yaml | indent(2) }}
-    when: item.site_keys | count
-    loop: "{{ site_keys_by_env_pair }}"
+- block:
+    - name: Load wordpress_sites.yml vars into <env>_sites vars
+      include_vars:
+        file: group_vars/{{ item }}/wordpress_sites.yml
+        name: "{{ item }}_sites"
+      loop: "{{ envs_with_wp_sites }}"
+      when: envs_with_wp_sites | count > 1
+
+    - name: Fail if there are duplicate site keys within host's wordpress_sites
+      fail:
+        msg: >
+          If you put multiple environments on `{{ inventory_hostname }}`, `wordpress_sites`
+          must use different site keys per environment. Adjust the following site keys that
+          are duplicated between the `{{ item.env_pair | join('` and `') }}` groups:
+            {{ item.site_keys | to_nice_yaml | indent(2) }}
+      when: item.site_keys | count
+      loop: "{{ site_keys_by_env_pair }}"
 
   when:
     - env_groups | count > 1
@@ -41,8 +48,8 @@
   vars:
     params:
       files:
-        - '{{ php_version }}.yml'
-        - '7.4.yml'
+        - "{{ php_version }}.yml"
+        - "7.4.yml"
       paths:
         - "{{ playbook_dir }}/roles/php/vars/"
 
