eliminar roots/wp-password-bcrypt

--- a/site/composer.json
+++ b/site/composer.json
@@ -51,7 +51,6 @@
     "roots/bedrock-disallow-indexing": "^2.0",
     "roots/wordpress": "6.7.2",
     "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.2.0",
     "wpengine/advanced-custom-fields-pro": "*",
     "wpackagist-theme/twentytwentyfive": "^1.0",
     "wpackagist-plugin/woocommerce": "*",
@@ -64,6 +63,7 @@
     "wpackagist-plugin/woocommerce-gateway-stripe": "*",
     "wpackagist-plugin/gdpr-cookie-compliance": "*",
     "wpackagist-plugin/mail-boxes-etc": "*",
+    "wpackagist-plugin/transmail": "*",
     "log1x/acf-composer": "^3.3",
     "log1x/navi": "^3.0.3",
     "mobiledetect/mobiledetectlib": "^4.8",
