--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,40 +1,35 @@
-# .github/workflows/deploy-staging.yml
-##
-# Deploy to staging with Trellis
-##
-
-name: 🚀 Deploy to staging
-run-name: deploy-staging
+name: 🚀 Deploy to Staging
 
 on:
   workflow_dispatch:
-  pull_request:
-    types: [closed]
-    branches: [staging]
-
-env:
-  environment: staging
 
 jobs:
-  deploy-staging:
-    if: ${{ github.actor != 'dependabot[bot]' }}
+  deploy:
+    name: Deploy to Staging
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      # Checkout the repo
-      - uses: actions/checkout@v3
+      - name: Setup Trellis CLI
+        uses: roots/setup-trellis-cli@v1
         with:
-          ref: ${{ github.event.pull_request.base.ref }}
+          ansible-vault-password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      # Deploy site to staging
-      - uses: ./.github/actions/trellis-cli
-        name: Deploy to staging
-        if: github.event.pull_request.merged || github.event_name == 'workflow_dispatch' || github.repository != 'MWDelaney/trellis-template'
-        with:
-          extra-vars: '""'
-          environment: ${{ env.environment }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          trellis_site_slug: ${{ secrets.TRELLIS_SITE_SLUG }}
-          trellis_deploy_ssh_private_key: ${{ secrets.TRELLIS_DEPLOY_SSH_PRIVATE_KEY }}
-          trellis_deploy_ssh_known_hosts: ${{ secrets.TRELLIS_DEPLOY_SSH_KNOWN_HOSTS }}
-          ansible_vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
+      - name: Build Sage 11 Theme
+        run: |
+          cd site/web/app/themes/sage
+          corepack enable
+          yarn
+          yarn build
+
+      - name: Build FB Blocks Plugin
+        run: |
+          cd site/web/app/plugins/fb-blocks
+          yarn
+          yarn build
+
+      - name: Deploy to staging
+        run: trellis deploy staging
