fix: copiar vendor del tema Sage durante el deploy

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -33,6 +33,11 @@ jobs:
           npm install
           npm run build
 
+      - name: Install Sage PHP dependencies
+        run: |
+          cd site/web/app/themes/sage
+          composer install --no-dev --no-interaction --optimize-autoloader
+
       - name: Build FB Blocks Plugin
         run: |
           cd site/web/app/plugins/fb-blocks
