Instalar plugin kadence-woocommerce-email-designer + WP 6.8.1

--- a/site/composer.json
+++ b/site/composer.json
@@ -49,7 +49,7 @@
     "oscarotero/env": "^2.1",
     "roots/bedrock-autoloader": "^1.0",
     "roots/bedrock-disallow-indexing": "^2.0",
-    "roots/wordpress": "6.7.2",
+    "roots/wordpress": "6.8.1",
     "roots/wp-config": "1.0.0",
     "wpengine/advanced-custom-fields-pro": "*",
     "wpackagist-theme/twentytwentyfive": "^1.0",
@@ -63,6 +63,7 @@
     "wpackagist-plugin/woocommerce-gateway-stripe": "*",
     "wpackagist-plugin/gdpr-cookie-compliance": "*",
     "wpackagist-plugin/mail-boxes-etc": "*",
+    "wpackagist-plugin/kadence-woocommerce-email-designer": "*",
     "wpackagist-plugin/transmail": "*",
     "log1x/acf-composer": "^3.3",
     "log1x/navi": "^3.0.3",
